crates/aiy/tests/snapshots/shell_tests__implicits__build_dev.sh.snap
---
source: crates/aiy/tests/shell_tests.rs
description: tests/shell_tests/implicits/build_dev.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that building a package that implicitly depends on `Bridge` works in dev mode
aiy move build --dev -p example 2> /dev/null

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
