crates/aiy/tests/snapshots/shell_tests__implicits__test_dev.sh.snap
---
source: crates/aiy/tests/shell_tests.rs
description: tests/shell_tests/implicits/test_dev.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# checks that testing a package with `--dev` that implicitly depends on `Bridge` works
aiy move test -p example --dev 2> /dev/null

----- results -----
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY AiySystem
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
